Fixes contrast issue with background color

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
   margin: 0;
   padding: 0;
 }
